<resources>
    <string name="app_name">OnDemandHomeRepair</string>
    <string name="usernameButton">usernameButton</string>
    <string name="passwordButton">passwordButton</string>
    <string name="username">username</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="AccountType">Select your account type from the list below:</string>
    <string name="basicUser">Basic User</string>
    <string name="serviceProvider">Service Provider</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="errorText" />
    <string name="title_activity_edit_service_provider_time">editServiceProviderTime</string>
    <string name="title_activity_edit_service_provider_services">editServiceProviderServices
    </string>
    <string name="YES">string</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_calender">Calender</string>


</resources>
